manifests/foo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foobar
  namespace: oreilly
spec:
  containers:
  - image: ghost
    name: foobar
