manifests/foobar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foobar
  namespace: default
spec:
  containers:
    - image: ghost
      name: ghost
