manifests/hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
  - image: busybox
    name: busybox
    command:
    - sleep
    - "3600"
    volumeMounts:
    - mountPath: /oreilly
      name: hostpath
  volumes:
  - name: hostpath
    hostPath:
      path: /data
