manifests/rq.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oreilly
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: oreilly
spec:
  containers:
  - image: redis:3.2
    imagePullPolicy: IfNotPresent
    name: mysql
  restartPolicy: Always
