manifests/wordpress-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wp
  labels:
    app: wp
spec:
  containers:
  - image: wordpress
    imagePullPolicy: IfNotPresent
    name: wordpress
  restartPolicy: Always
