manifests/wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wp
  labels:
    app: wp
spec:
  containers:
  - image: wordpress
    imagePullPolicy: IfNotPresent
    name: wordpress
  - image: mysql:5.5
    imagePullPolicy: IfNotPresent
    name: mysql
  restartPolicy: Always
