manifests/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp
  name: wp
spec:
  ports:
    - port: 80
  type: NodePort
  selector:
    app: wp
